<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/menu_inicio"
            android:icon="@drawable/menu_inicio" />
        <item
            android:id="@+id/nav_minha_conta"
            android:title="@string/menu_minha_conta"
            android:icon="@drawable/menu_minha_conta"/>

    </group>

    <item android:title="Compras">
        <menu>
            <item
                android:id="@+id/nav_cesta_compras"
                android:icon="@drawable/menu_cesta_compras"
                android:title="@string/menu_cesta_compras"/>

            <item
                android:id="@+id/nav_historico"
                android:icon="@drawable/menu_historico"
                android:title="@string/menu_historico"/>


        </menu>
    </item>


    <item android:title="Adicionais">
        <menu>
            <item
                android:id="@+id/nav_lembretes"
                android:icon="@drawable/menu_lembretes"
                android:title="@string/menu_lembretes"/>

            <item
                android:id="@+id/nav_lojas_parceiras"
                android:icon="@drawable/menu_lojas_parceiras"
                android:title="@string/menu_lojas_parceiras"/>


            <item
                android:id="@+id/nav_central"
                android:icon="@drawable/menu_central_atendimento"
                android:title="@string/menu_central_atendimento"/>

            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/menu_sair"
                android:title="@string/menu_sair"/>
        </menu>
    </item>

</menu>
